# datapilot

./: .claudeignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  DATAPILOT_DIAGNOSTIC.md  LICENSE  Makefile  README.md  chart_response.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  simple_response.json
.claude/: settings.local.json
.claude/agents/: code-review.md  docs-writer.md  test-writer.md
.claude/commands/: audit.md  dev.md  diagnose.md  fix-bug.md  implement.md  lint.md  plan-feature.md  review-diff.md  review.md  test.md  write-tests.md
.github/workflows/: test.yml
backend/: CLAUDE.md  Dockerfile  requirements.txt
backend/app/: main.py
data/curated/: telecom_customers_v1.xlsx
data/derived/: churn_analysis_v1.xlsx  customer_risk_scores_v1.xlsx
data/raw/: clustered_data.csv  curated_data.csv  entities_results.csv  intent_model.pkl  intent_results.csv  model_lightgbm.pkl  model_logistic.pkl  model_random_forest.pkl  model_xgboost.pkl  reduced_data.csv  regressor_linear.pkl  sentiment_results.csv  synthetic_text.csv  synthetic_timeseries.csv
data_products/reports/: churn_analysis_report_v1.docx  churn_analysis_report_v1.pptx  executive_report_v1.md  ~$churn_analysis_report_v1.pptx  ~$urn_analysis_report_v1.docx
docs/: api-reference.md  architecture.md  data-pipeline.md  llm-providers.md  quickstart.md  session-persistence.md  skills-reference.md  tdd-session-persistence.md
engine/: CLAUDE.md
engine/datapilot/: __init__.py
frontend/: CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
metadata/: lineage.json  registry.json
metadata/schemas/: raw_data_schema.json
models/: churn_model.pkl
sandbox/analysis-lib/: production_run_results.md  requirements.txt  test_results.md
src/: __init__.py  config.py  utils.py
src/ai/: __init__.py  ai_analyst.py
src/analysis/: __init__.py  analyzer.py  threshold_finder.py
src/ingestion/: __init__.py  file_loader.py  schema_inference.py
src/ml/: __init__.py  trainer.py
src/processing/: __init__.py  curation.py  derivation.py
src/products/: __init__.py  export.py  report_generator.py  visualisation.py
tests/: CLAUDE.md
tests/test_data/: Raw Data.xlsx  sample.csv
tests/unit/: test_autopilot.py  test_chart_suggest.py  test_e2e_human_questions.py  test_export_content.py  test_failover.py  test_fingerprint.py  test_fingerprint_d3.py  (+8 more)
(+107 files in other folders)
